[package]
name = "mygrep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = { version = "1.8.4" }
colored = { version = "2" }
async-process = { version = "2.0.1" }
async-io = { version = "2.3.1" }
futures-lite = { version = "1" }
